--- a/online_examination/package.json
+++ b/online_examination/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
