solved some knows issues

--- a/OnlineExaminationBackEnd/src/main/resources/application.properties
+++ b/OnlineExaminationBackEnd/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=OnlineExaminationBackEnd
-spring.datasource.url=jdbc:sqlserver://localhost\\SQLEXPRESS:1433;databaseName=Online Examination;trustServerCertificate=true;
+spring.datasource.url=jdbc:sqlserver://localhost\\SQLEXPRESS:1433;databaseName=examDb;trustServerCertificate=true;
 spring.datasource.username=root
 spring.datasource.password=Prime786@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
